--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -2,13 +2,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 1em;
+    margin: 0em;
     border-radius: 5px;
-    background-color: #f8f8f8;
-    padding: 0.8em;
+    background-color: #01c1dabe;
+    padding: 0.6em;
+    margin-bottom: 10px;
 }
 
 .title span{
-    margin-left: 1em;
+    margin-left: 0.5em;
     font-size: 1.5em;
+    color: #ffffff;
 }
