--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -4,8 +4,7 @@
     border-radius: 5px;
     padding: 0.8em;
     align-items: center;
-    margin-bottom: 1em;
-    margin: 14.5px
+    margin-bottom: 0.9em;
 }
 
 .label-avatar{
@@ -61,9 +60,9 @@
 }
 
 .logout-btn{
-    padding: 8px 20px;
+    padding: 1px 20px;
     background-color: transparent;
-    border: 1px solid #121212;
+    border: 1px solid #4b4b4b;
     border-radius: 5px;
     font-size: 1.5em;
     display: flex;
