--- a/src/components/ModalSaidaProdutos/modalSaidaProdutos.css
+++ b/src/components/ModalSaidaProdutos/modalSaidaProdutos.css
@@ -1,4 +1,4 @@
-.modalSaidaProdutos{
+.modalSaidaProdutos {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -6,21 +6,21 @@
     left: 0;
     background: rgba(0, 0, 0, 0.5);
     z-index: 99;
-}
-
-.modalSaidaProdutos .container{
+  }
+  
+  .modalSaidaProdutos .container {
     position: fixed;
     max-width: 600px;
     top: 15%;
     left: 0;
     right: 0;
     margin: 0 auto;
-    padding: 4em 2rem;
+    padding: 4em 5rem;
     background-color: #fff;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-}
-
-.close{
+  }
+  
+  .close {
     background-color: black;
     border: 0;
     color: #fff;
@@ -30,15 +30,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 4px 15px;
+    padding: 2px 9px;
     border-radius: 5px;
-}
-
-.close svg{
-    margin-right: 5px;
-}
-
-.buttonContinue {
+  }
+  
+  .close svg {
+    margin-right: 3px;
+  }
+  
+  .buttonContinue {
     background-color: black;
     border: 0;
     color: #fff;
@@ -66,29 +66,33 @@
     border-radius: 5px;
   }
   
-.modalSaidaProdutos h2{
-    margin-bottom: 1.2em;
-    font-size: 2em;
-}
-
-.modalSaidaProdutos span{
+  .modalSaidaProdutos h3 {
+    margin-bottom: 2.2em;
+    font-size: 1.5em;
+  }
+  
+  .modalSaidaProdutos span {
     font-weight: bold;
     font-size: 1.2em;
     color: #121212;
-}
-
-.modalSaidaProdutos span i{
+  }
+  
+  .modalSaidaProdutos span i {
     font-weight: 400;
     margin-right: 1em;
     padding: 2px 8px;
     border-radius: 4px;
-}
-
-.row{
+  }
+  
+  .row {
     margin-bottom: 1em;
-}
-
-.modalSaidaProdutos p{
+  }
+  
+  .modalSaidaProdutos p {
     padding-top: 0.6em;
     white-space: pre-wrap;
-}
+  }
+  
+  .container .warning {
+      margin-top: -14px;
+  }
